--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansis": "^3.3.2",
     "fast-deep-equal": "^3.1.3",
     "typescript": "^5.6.2"
   }
