--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.7.5",
+    "@types/object-hash": "^3.0.6",
     "ansis": "^3.3.2",
     "fast-deep-equal": "^3.1.3",
+    "object-hash": "^3.0.0",
     "typescript": "^5.6.2"
   }
 }
