--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "fast-deep-equal": "^3.1.3",
     "object-hash": "^3.0.0",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.1.11"
   }
 }
