--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@types/node": "^22.7.5",
     "@types/object-hash": "^3.0.6",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "ansis": "^3.3.2",
     "fast-deep-equal": "^3.1.3",
     "object-hash": "^3.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
