--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@codemirror/view": "^6.34.1",
+    "@nextjournal/lang-clojure": "^1.0.0",
     "@types/node": "^22.7.5",
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "ansis": "^3.3.2",
+    "codemirror": "^5.65.18",
     "fast-deep-equal": "^3.1.3",
     "object-hash": "^3.0.0",
     "react": "^18.3.1",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.2"
   },
